<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="727dp"
                android:background="#fcf4e2">

                <EditText
                    android:id="@+id/editTextFirstName"
                    android:layout_width="141dp"
                    android:layout_height="42dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="40dp"
                    android:ems="10"
                    android:hint="@string/enter_first_name"
                    android:inputType="textPersonName"
                    app:layout_constraintEnd_toStartOf="@id/editTextLastName"
                    app:layout_constraintHorizontal_bias="0.314"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/editTextLastName"
                    android:layout_width="152dp"
                    android:layout_height="41dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="44dp"
                    android:ems="10"
                    android:hint="@string/enter_last_name"
                    android:inputType="textPersonName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textViewPersonalData"
                    style="@style/noteStyle"
                    android:layout_width="341dp"
                    android:layout_height="47dp"
                    android:layout_marginTop="28dp"
                    android:text="@string/personal_data"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/editTextFirstName" />

                <EditText
                    android:id="@+id/editTextUserWeight"
                    android:layout_width="128dp"
                    android:layout_height="47dp"
                    android:layout_marginStart="60dp"
                    android:layout_marginTop="32dp"
                    android:ems="10"
                    android:hint="@string/weight"
                    android:inputType="textPersonName"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/editTextUserHeightFt"
                    app:layout_constraintTop_toBottomOf="@id/textViewPersonalData" />

                <EditText
                    android:id="@+id/editTextUserHeightFt"
                    android:layout_width="50dp"
                    android:layout_height="46dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginStart="25dp"
                    android:ems="10"
                    android:hint="Ft."
                    android:inputType="number"
                    app:layout_constraintStart_toEndOf="@id/editTextUserWeight"
                    app:layout_constraintTop_toBottomOf="@id/textViewPersonalData" />

                <EditText
                    android:id="@+id/editTextUserHeightIn"
                    android:layout_width="50dp"
                    android:layout_height="46dp"
                    android:layout_marginTop="32dp"
                    android:ems="10"
                    android:hint="In."
                    android:inputType="number"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.112"
                    app:layout_constraintStart_toEndOf="@id/editTextUserHeightFt"
                    app:layout_constraintTop_toBottomOf="@id/textViewPersonalData" />

                <EditText
                    android:id="@+id/editTextUserGender"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/gender"
                    android:inputType="textPersonName"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/editTextPhoneNum"
                    app:layout_constraintTop_toBottomOf="@id/editTextUserWeight" />

                <EditText
                    android:id="@+id/editTextPhoneNum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:ems="10"
                    android:hint="@string/phone_num"
                    android:inputType="textPersonName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/editTextUserGender"
                    app:layout_constraintTop_toBottomOf="@id/editTextUserWeight" />

                <EditText
                    android:id="@+id/editTextPrefWorkout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:ems="10"
                    android:hint="Preferred Workout Time"
                    android:inputType="textPersonName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.497"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textViewPrefWork" />

                <TextView
                    android:id="@+id/textViewPrefWork"
                    style="@style/InfoLabelStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/pref_workout_time"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.513"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/editTextPhoneNum" />

                <EditText
                    android:id="@+id/editTextDietPref"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:ems="10"
                    android:hint="@string/diet_pref"
                    android:inputType="textPersonName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.502"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/editTextPrefWorkout" />

                <EditText
                    android:id="@+id/editTextFaceUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:ems="10"
                    android:hint="@string/facebook_username"
                    android:inputType="textPersonName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.502"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/editTextDietPref" />

                <TextView
                    android:id="@+id/textViewWarning"
                    style="@style/attentionNoteStyle"
                    android:layout_width="346dp"
                    android:layout_height="69dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/warning"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.492"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/editTextFaceUser" />

                <Button
                    android:id="@+id/buttonFinishRegis"
                    style="@style/buttonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/finish_reg"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textViewWarning" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>